[package]
name = "anonymous_credentials"
version = "0.1.0"
edition = "2021"

[dependencies]
# CL signatures (GitHub)
cl-signature-rust = { git = "https://github.com/baozi78/cl-signature-rust" }

# Ursa for legacy support (optional)
# ursa = { git = "https://github.com/hyperledger-archives/ursa", default-features = false, features = ["cl_native", "serde"] }

# BBS+ signatures
bbs_plus = "0.19"

# Arkworks ecosystem for BBS
ark-bls12-381 = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
ark-serialize = "0.4"
ark-std = "0.4"

# RSA blind signatures
blind-rsa-signatures = { git = "https://github.com/baozi78/rust-blind-rsa-signatures" }
rsa = "0.9"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
num-integer = "0.1"

# Bulletproofs for range proofs
bulletproofs = "4.0"
curve25519-dalek-ng = "4.1"
merlin = "3.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Random number generation
rand = "0.8"

# Error handling
thiserror = "1.0"

# Cryptographic utilities
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
criterion = "0.5"
